# RuntimeClassSelection

./: .gitignore  .gitmodules  CMakeLists.txt  NoVirtual.hpp  Readme.md  Templated.hpp  WithVirtual.hpp  main.cpp
